# data-analysis-starter

./: .env.example  .gitignore  .gitignore.team-template  AGENTS.md  TEAM_SETUP.md  bootstrap.py  config.py  example_simple_usage.py  pyproject.toml  readme.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
data/: README.md
notebooks/: README.md
output/: README.md
src/: README.md
test/: test.ipynb
tests/: test_bootstrap.py  test_config.py  test_config_env.py  test_config_file.py  test_parse_data.py
tests/data/: testdata.csv
tests/notebooks/: test_setup.ipynb
utils/: pipeline_graph.py
