[project]
name = "data-analysis-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
