[project]
name = "data-analysis-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
